fix: update changelog

--- a/docs/changelog/5.11.0.mdx
+++ b/docs/changelog/5.11.0.mdx
@@ -36,9 +36,16 @@ Learn more about CI/CD and how to set it up for your Webiny project in our [CI/C
 
 :::
 
-#### Updates to the pull-requests workflows
+#### Updates to the Pull Requests Workflows
 
-The pull-request workflow that gets created during the scaffolding process will now make sure that all of the changes are deployed into a short-lived environment. This will happen on every new PR and every time a new change is πThis makes it possible for the team to check out all of the changes on their own, before the PR is merged. And, once the PR is either merged or simply closed, all of the cloud infrastructure resources will be destroyed.
+The pull request workflow that gets created during the scaffolding process will now make sure that all of the changes are deployed into a short-lived environment. This makes it possible for the team to check out all of the changes on their own, before the PR is merged. And, once the PR is either merged or simply closed, the short-lived environment will automatically be destroyed.
+
+
+#### Improved Testing
+
+Prior to this release, with the single `yarn test` command, the created workflows would run all of your application tests immediately - unit, integration, and end-to-end (E2E).
+
+This has now been divided into separate commands, so the three types of tests will be run separately, and most importantly, in the right order. For example, we cannot run integration tests before our project has been deployed.
 
 <!-- These are for 5.12.0 -->
 
