fix: add missing "&&"

--- a/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/ci-cd.mdx
@@ -95,7 +95,7 @@ git fetch && \
 git add -A && \
 git commit -m "chore: initial commit" && \
 git checkout dev && \
-git merge master --allow-unrelated-histories -m "merge: pull changes from master" \
+git merge master --allow-unrelated-histories -m "merge: pull changes from master" && \
 git push -u origin dev
 ```
 
