fix: add missing plural

--- a/docs/changelog/5.11.0.mdx
+++ b/docs/changelog/5.11.0.mdx
@@ -20,7 +20,7 @@ Please check the [Webiny 5.11.0 migration guide](/docs/how-to-guides/upgrade-web
 
 ### Pulumi v3 Upgrade ([#1787](https://github.com/webiny/webiny-js/pull/1787))
 
-From now on, all Webiny project will use [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) v3.
+From now on, all Webiny projects will use [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) v3.
 
 For Webiny users, this will make it possible to have access to all of the new features and fixes that the framework will receive in the future.
 
