--- a/docs/changelog/5.11.0.mdx
+++ b/docs/changelog/5.11.0.mdx
@@ -6,6 +6,10 @@ keywords: ["webiny", "version", "5.11.0", "changelog"]
 description: See what's new in Webiny version 5.11.0.
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import objectField from "./5.11.0/objectField.gif";
+import patternValidators from "./5.11.0/patternValidators.png";
+
 # Changes
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.11.0`.
@@ -15,6 +19,30 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.11.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.10.0-to-5.11.0) for the upgrade steps.
 
 :::
+
+## Headless CMS
+
+### Introduce Object Field ([#1780](https://github.com/webiny/webiny-js/pull/1780))
+
+The new `object` field allows you to build nested data structures and also have those data structures be repeatable (like an array of nested objects). It supports nesting, so you can nest objects within other objects. Object field respects all the rules and behaviors of all the other existing fields (`ref` field, `richText` field, etc.). You also get a full GraphQL Schema auto-complete on your nested fields.
+
+<CenteredImage alt="Model Data Using the Object Field" src={objectField} />
+
+> NOTE: at this point, we do not support filtering of data based on the values within the object field. However, we do plan to add support for that type of querying in the future.
+
+### Always Load The Latest Published Entry ([#1775](https://github.com/webiny/webiny-js/pull/1775))
+
+Read API now always returns the latest published content entry, no matter which version of the entry was originally linked. This ensures that, no matter how many new versions of content you publish, the reference always points to the latest published version.
+
+## Form Builder
+
+### Pattern Type Validators Missing From UI ([#1778](https://github.com/webiny/webiny-js/pull/1778))
+
+Pattern validators are now visible in the Form Builder editor, when configuring individual form fields. Besides, we also fixed the setup of the `website` app, and those field validators are now working properly when the form is being submitted.
+
+<CenteredImage alt="Pattern Field Validators in the Form Editor" src={patternValidators} />
+
+Shout out to [Karthick Raja](https://github.com/karthick3018) for getting the ball rolling on this issue! :rocket: :heart:
 
 ## Development
 
@@ -40,10 +68,8 @@ Learn more about CI/CD and how to set it up for your Webiny project in our [CI/C
 
 The pull request workflow that gets created during the scaffolding process will now make sure that all of the changes are deployed into a short-lived environment. This makes it possible for the team to check out all of the changes on their own, before the PR is merged. And, once the PR is either merged or simply closed, the short-lived environment will automatically be destroyed.
 
-
 #### Improved Testing
 
 Prior to this release, with the single `yarn test` command, the created workflows would run all of your application tests immediately - unit, integration, and end-to-end (E2E).
 
 This has now been divided into separate commands, so the three types of tests will be run separately, and most importantly, in the right order. For example, we cannot run integration tests before our project has been deployed.
-
