fix: update CloudFormation template URL

--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -96,7 +96,7 @@ If you don't have one please refer to the [previous step](/docs/how-to-guides/de
 
 Alternatively, you can also define a fine-grain policy using our [CloudFormation template](https://github.com/webiny/webiny-js/blob/next/docs/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json)
 that will create a [user group](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_groups.html) with all the necessary policies, for your Webiny project and assign a given user to it.
-You can do this by clicking [create stack](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://cf-templates-16wmwt5xsvalh-ap-southeast-1.s3.ap-southeast-1.amazonaws.com/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json&stackName=Create-webiny-project):
+You can do this by clicking [create stack](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/iam-group-webiny-project-full.json&stackName=Create-webiny-project):
 
 ![aws-cloudformation-create-stack](./assets/configure-aws-credentials/create-stack.gif)
 
