--- a/docs/changelog/5.11.0.mdx
+++ b/docs/changelog/5.11.0.mdx
@@ -44,6 +44,16 @@ Pattern validators are now visible in the Form Builder editor, when configuring 
 
 Shout out to [Karthick Raja](https://github.com/karthick3018) for getting the ball rolling on this issue! :rocket: :heart:
 
+## Security
+
+### Fine-grain AWS policies ([#1741](https://github.com/webiny/webiny-js/pull/1741))
+
+From now on, all new Webiny projects will benefit from improved security, due to fine-grain policies used with AWS Lambda roles (instead of using the default `AdministratorAccess` policy, which was previously the case).
+
+In addition to that, you can also use a fine-grain policy for the [CLI user](/docs/how-to-guides/deployment/aws/configure-aws-credentials/#attaching-a-fine-grain-policy), which is important for making secure deploys of your Webiny project.
+
+At the moment, for existing projects we don’t offer a migration path, but if you’re interested in applying this improvement to your Webiny project, you can contact us via our community [Slack](https://webiny.com/slack).
+
 ## Development
 
 ### Pulumi v3 Upgrade ([#1787](https://github.com/webiny/webiny-js/pull/1787))
