--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -8,7 +8,7 @@ description: Configure AWS credentials.
 
 :::tip What you’ll learn
 - how to configure your AWS credentials for programmatic access
-- how to create a user with fine-grain policies using CloudFormation template
+- how to create a user with fine-grained policies using CloudFormation template
 :::
 
 import YouTube from "@components/Youtube";
@@ -64,9 +64,9 @@ Make sure to select the **Programmatic access** checkbox before moving to the ne
 
 In the next step you define the access level for the new user. Select **Attach existing Policies** from the three options that are available. Then select the **AdministratorAccess** policy by marking the checkbox next to it. When ready, click the **Next:Tags** button:
 
-:::caution Want fine-grain permissions?
+:::caution Want fine-grained permissions?
 In case your organization can't use the `AdministratorAccess` or if you want to have a more strictly defined set of permissions,
-please see the [attaching fine-grain policy](/docs/how-to-guides/deployment/aws/configure-aws-credentials#attaching-a-fine-grain-policy) section.
+please see the [attaching fine-grained policy](/docs/how-to-guides/deployment/aws/configure-aws-credentials#attaching-a-fine-grained-policy) section.
 :::
 
 ![aws-user-permissions](./assets/configure-aws-credentials/aws-user-permissions.png)
@@ -87,14 +87,14 @@ Once you navigate off this screen, you will not be able to see the credentials a
 
 ![aws-user-created](./assets/configure-aws-credentials/aws-user-created.png)
 
-### Attaching a Fine-grain Policy
+### Attaching a Fine-grained Policy
 
 :::info
 Please note that a user with programmatic access is a prerequisite for this step.
 If you don't have one please refer to the [previous step](/docs/how-to-guides/deployment/aws/configure-aws-credentials#step-2-create-a-user-for-programmatic-access).
 :::
 
-Alternatively, you can also define a fine-grain policy using our [CloudFormation template](https://github.com/webiny/webiny-js/blob/next/docs/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json)
+Alternatively, you can also define a fine-grained policy using our [CloudFormation template](https://github.com/webiny/webiny-js/blob/next/docs/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json)
 that will create a [user group](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_groups.html) with all the necessary policies, for your Webiny project and assign a given user to it.
 You can do this by clicking [create stack](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/iam-group-webiny-project-full.json&stackName=Create-webiny-project):
 
