Update: how to guide AWS credentials (#308)
* feat: add assets for aws user policy

* feat: add attach policy section

* fix: update as per the feedback

* feat: update aws credentials guide with create stack gif

* fix: update aws credentials guide as per feedback

* fix: update CloudFormation template URL

* fix: use fine-grained correctly

--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -8,6 +8,7 @@ description: Configure AWS credentials.
 
 :::tip What you’ll learn
 - how to configure your AWS credentials for programmatic access
+- how to create a user with fine-grained policies using CloudFormation template
 :::
 
 import YouTube from "@components/Youtube";
@@ -16,7 +17,7 @@ This article guides you through configuring your AWS credentials for programmati
 
 If you prefer the video version, check out our YouTube video below:
 
-<YouTube id="qmtDRmplMG4" />
+<YouTube id="qmtDRmplMG4"/>
 
 ---
 
@@ -54,26 +55,27 @@ Click on **Add user** to create the account with the IAM credentials:
 
 ![aws-create-user](./assets/configure-aws-credentials/aws-create-user.png)
 
-Here you enter a 5-step process, and the first step is to create a `User name` for the credentials.
+Here you enter a 5-step process, and the first step is to create a **User name** for the credentials.
 :::caution Programmatic access
 Make sure to select the **Programmatic access** checkbox before moving to the next step.
 :::
 
 ![aws-user-details](./assets/configure-aws-credentials/aws-user-details.png)
 
-In the next step you define the access level for the new user. Select **Attach existing Policies** from the three options that are available. Then select the **AdministratorAccess** role by marking the checkbox next to it. When ready, click the `Next:Tags` button:
+In the next step you define the access level for the new user. Select **Attach existing Policies** from the three options that are available. Then select the **AdministratorAccess** policy by marking the checkbox next to it. When ready, click the **Next:Tags** button:
 
-:::info
-Because Webiny creates different resources on your AWS account, it has to have administration-level access to many of the resources. If you feel this is a blocker for your project, get in touch via our [community slack](https://www.webiny.com/slack) and we'll help you out.
+:::caution Want fine-grained permissions?
+In case your organization can't use the `AdministratorAccess` or if you want to have a more strictly defined set of permissions,
+please see the [attaching fine-grained policy](/docs/how-to-guides/deployment/aws/configure-aws-credentials#attaching-a-fine-grained-policy) section.
 :::
 
 ![aws-user-permissions](./assets/configure-aws-credentials/aws-user-permissions.png)
 
-In case you don't want to add any tags to your new user, you can just skip this step and click the `Next:Review` button.
+In case you don't want to add any tags to your new user, you can just skip this step and click the **Next:Review** button.
 
 ![aws-user-tags](./assets/configure-aws-credentials/aws-user-tags.png)
 
-After all the steps are complete, you'll see a `Review` page. It should look something similar to this. If everything is correct, click the `Create user` button.
+After all the steps are complete, you'll see a **Review** page. It should look something similar to this. If everything is correct, click the **Create user** button.
 
 ![aws-user-review](./assets/configure-aws-credentials/aws-user-review.png)
 
@@ -84,6 +86,28 @@ Once you navigate off this screen, you will not be able to see the credentials a
 :::
 
 ![aws-user-created](./assets/configure-aws-credentials/aws-user-created.png)
+
+### Attaching a Fine-grained Policy
+
+:::info
+Please note that a user with programmatic access is a prerequisite for this step.
+If you don't have one please refer to the [previous step](/docs/how-to-guides/deployment/aws/configure-aws-credentials#step-2-create-a-user-for-programmatic-access).
+:::
+
+Alternatively, you can also define a fine-grained policy using our [CloudFormation template](https://github.com/webiny/webiny-js/blob/next/docs/CWP_POLICY_CLOUDFORMATION_TEMPLATE.json)
+that will create a [user group](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_groups.html) with all the necessary policies, for your Webiny project and assign a given user to it.
+You can do this by clicking [create stack](https://console.aws.amazon.com/cloudformation/home?#/stacks/create/review?templateURL=https://webiny-public.s3.us-east-2.amazonaws.com/cloudformation/iam-group-webiny-project-full.json&stackName=Create-webiny-project):
+
+![aws-cloudformation-create-stack](./assets/configure-aws-credentials/create-stack.gif)
+
+The resource creation will take a few minutes. After completion, you will see the completion logs:
+
+![aws-cloudformation-step-5](./assets/configure-aws-credentials/cloudformation-step-5.png)
+
+Afterwards, you can check out the newly created resources in the [IAM service panel](https://console.aws.amazon.com/iamv2/home?#/users).
+Also, if you head over to the previously created user (`webiny-cli` in our case), you will see the attached policy and group:
+
+![aws-cloudformation-step-6](./assets/configure-aws-credentials/cloudformation-step-6.png)
 
 ## Step 3: Configure the Programmatic Access
 
