wip: create graphql plugins guides

--- a/docs/how-to-guides/extend-graphql-api.mdx
+++ b/docs/how-to-guides/extend-graphql-api.mdx
@@ -52,7 +52,7 @@ OVE PRIMJERE GENERICKI POKAZATI, ALI NARAVNO , DONJI LINKOVI STOJE ZA MORE SPECI
 
 ## Additional Related Examples
 
-To learn more, you can also visit the following guides which explain how to extend different sections in your GraphQL API:
+To learn more, you can also visit the following guides which explain how to extend GraphQL types and operations that belong to different Webiny applications:
 
-- [Page Builder](#)
-- [Headless CMS](#)
+- [Page Builder](/docs/how-to-guides/webiny-applications/page-builder/extend-graphql-api)
+- [Headless CMS](/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api)
