--- a/docs/how-to-guides/upgrade-webiny/5.10.0-to-5.11.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.10.0-to-5.11.0.mdx
@@ -69,6 +69,10 @@ Learn more about different deployment environments in the [CI/CD / Environments]
 
 ### Pulumi v3 Upgrade
 
+:::danger
+As stated in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#pre-production-environments-first) section, to prevent any data loss or other critical problems that might occur while upgrading, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+:::
+
 As mentioned in the [changelog](/docs/changelog/5.11.0), from the 5.11.0 release, all Webiny projects will use [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) v3.
 
 In terms of existing projects and upgrading, there shouldn't be any major changes or extra steps that you'll need to perform. But, there are a couple of things to have in mind.
