wip: create graphql plugins guides

--- a/docs/how-to-guides/extend-graphql-api.mdx
+++ b/docs/how-to-guides/extend-graphql-api.mdx
@@ -15,19 +15,22 @@ By default, every Webiny project starts off with two separate GraphQL APIs.
 
 ### Default GraphQL API
 
-The **default GraphQL API** (or just **GraphQL API**) is the GraphQL API that's located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.11.0-beta.1/packages/cwp-template-aws/template/api/code/graphql) folder. All of the Webiny Serverless CMS applications are built on top of it, and, in the same fashion, the API can be extended by developers, if need be.
+The **default GraphQL API** (or just **GraphQL API**) is the GraphQL API that's located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql) folder. All of the Webiny Serverless CMS applications are built on top of it, and, in the same fashion, the API can be extended by developers, if need be.
 
 :::tip
+
 The [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) and [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffolds use the same concepts and approaches that are explained in this guide.
+
 :::
 
 ### Headless CMS GraphQL API
 
-The **Headless CMS GraphQL API** is a special standalone GraphQL API that is introduced by the Headless CMS application. It's located in the [`api/code/headlessCMS`](https://github.com/webiny/webiny-js/tree/v5.11.0-beta.1/packages/cwp-template-aws/template/api/code/headlessCMS) folder and, like the default GraphQL API, can also be extended by developers.
+The **Headless CMS GraphQL API** is a special standalone GraphQL API that is introduced by the Headless CMS application. It's located in the [`api/code/headlessCMS`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/headlessCMS) folder and, like the default GraphQL API, can also be extended by developers.
 
 :::info
 
 Learn more about the [Headless CMS GraphQL API](/docs/key-topics/webiny-applications/headless-cms/graphql-api).
+
 :::
 
 ## Extending GraphQL API
@@ -38,21 +41,61 @@ In general, when talking about extending an existing GraphQL API, we're usually 
 - adding new GraphQL [types](https://graphql.org/learn/schema/#object-types-and-fields)
 - extending existing GraphQL types with additional [fields](https://graphql.org/learn/queries/#fields)
 
-For example, we might want to add a new, Page Builder-related, `duplicatePage` mutation, that would be responsible for making copies of provided pages. Or, we might just want to add an extra field to the [`PbPage`](https://github.com/webiny/webiny-js/blob/v5.11.0-beta.1/packages/api-page-builder/src/graphql/graphql/pages.gql.ts#L30) GraphQL type, so that we can store some additional data for each page.
+For example, we might want to add a new, Page Builder-related, `duplicatePage` mutation, that would be responsible for making copies of provided pages. Or, we might just want to add an extra field to the [`PbPage`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-page-builder/src/graphql/graphql/pages.gql.ts#L30) GraphQL type, so that we can store some additional data for each page.
 
-And although, depending on the application and the change we want to perform, some of the steps in the overall GraphQL extension process may differ, in all cases, we will want to start by registering a new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0-beta.1/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugin.
+And although, depending on the application and the change we want to perform, some of the steps in the overall GraphQL extension process may differ, in all cases, we will want to start by registering a new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugin.
 
-The plugin is registered within your GraphQL API's application code. For example, if we wanted to extend the default GraphQL API, we would create the plugin inside of the [`api/code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.11.0-beta.1/packages/cwp-template-aws/template/api/code/graphql/src/plugins) folder, and register it in the [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/tree/v5.11.0-beta.1/packages/cwp-template-aws/template/api/code/graphql/src/index.ts) entrypoint file. On the other hand, if we wanted to extend the Headless CMS GraphQL API, we would create the plugin inside of the [`api/code/headlessCMS/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.11.0-beta.1/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts) folder, and register it in the [`api/code/headlessCMS/src/plugins/index.ts`](https://github.com/webiny/webiny-js/tree/v5.11.0-beta.1/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts) entrypoint file.
+The plugin is registered within your GraphQL API's application code. For example, if we wanted to extend the default GraphQL API, we would create the plugin inside of the [`api/code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql/src/plugins) folder, and register it in the [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/graphql/src/index.ts) entrypoint file. On the other hand, if we wanted to extend the Headless CMS GraphQL API, we would create the plugin inside of the [`api/code/headlessCMS/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts) folder, and register it in the [`api/code/headlessCMS/src/plugins/index.ts`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/cwp-template-aws/template/api/code/headlessCMS/src/index.ts) entrypoint file.
 
 :::info
-The [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0-beta.1/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugin is part of the [`@webiny/handler-graphql`](https://github.com/webiny/webiny-js/tree/v5.11.0-beta.1/packages/handler-graphql) package, which can also be used to create new standalone GraphQL APIs.
+The [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugin is part of the [`@webiny/handler-graphql`](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/handler-graphql) package, which can also be used to create new standalone GraphQL APIs.
 :::
 
-OVE PRIMJERE GENERICKI POKAZATI, ALI NARAVNO , DONJI LINKOVI STOJE ZA MORE SPECIFIC STVARI
+The following is an example of a simple [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugin that extends the default GraphQL API with a new `listBooks` query:
+
+```ts title="api/code/graphql/src/plugins/books.ts"
+import { GraphQLSchemaPlugin } from "@webiny/handler-graphql/plugins";
+import { ListResponse } from "@webiny/handler-graphql/responses";
+
+export default new GraphQLSchemaPlugin({
+  // Extend the `Query` type with the `Book` type and `listBooks` query field,
+  // which returns a list of all books previosly saved in the database.
+  typeDefs: /* GraphQL */ `
+                   extend type Query {
+                     type Book {
+                       title
+                       description
+                     }
+
+                     # Returns a list of all users
+                     listBooks: [Book]
+                   }
+                 `,
+  // In order for the `listBooks` to work, we also need to create a resolver function.
+  resolvers: {
+    Query: {
+      listBooks: async (_, args, context) => {
+        // In a real life application, these would be loaded from the database.
+        const books = [
+          { title: "First book", description: "This is the first book." },
+          { title: "Second book", description: "This is the second book." }
+        ];
+
+        // Finally, return the list of books using the `ListResponse` class instance.
+        return new ListResponse(...books);
+      }
+    }
+  }
+});
+```
+
+:::tip
+To extend your default GraphQL API in no time, make sure to try the [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) and [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffolds.
+:::
 
 ## Additional Related Examples
 
-To learn more, you can also visit the following guides which explain how to extend GraphQL types and operations that belong to different Webiny applications:
+For more concrete examples, you can also visit the following guides which explain how to extend GraphQL types and operations that belong to different Webiny applications:
 
 - [Page Builder](/docs/how-to-guides/webiny-applications/page-builder/extend-graphql-api)
 - [Headless CMS](/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api)
