--- a/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api.mdx
@@ -36,11 +36,11 @@ The `createdBy` field is automatically assigned to every content entry and it re
 
 :::
 
-Creating the new `listMyPosts` query can be achieved via a single [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0-beta.1/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugin.
+Creating the new `listMyPosts` query can be achieved via a single [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugin.
 
 ```ts title="api/code/headlessCMS/src/plugins/posts.ts"
 import { GraphQLSchemaPlugin } from "@webiny/handler-graphql/plugins";
-import { ListResponse } from "@webiny/handler-graphql";
+import { ListResponse } from "@webiny/handler-graphql/responses";
 import { CmsContentEntry, CmsContentEntryMeta, CmsContext } from "@webiny/api-headless-cms/types";
 
 export default [
