wip: create graphql plugins guides

--- a/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api.mdx
@@ -2,7 +2,7 @@
 id: extend-graphql-api
 title: Extend GraphQL API
 sidebar_label: Extend GraphQL API
-keywords: ["page", "builder", "graphql", "gql", "api", "extend", "expand"]
+keywords: ["headless", "cms", "graphql", "gql", "api", "extend", "expand"]
 description: Learn how to extend the Headless CMS-related GraphQL types and operations.
 ---
 
@@ -64,7 +64,7 @@ export default [
 
                     // Use the `cms.entries.listLatest` method to fetch latest entries for the currently
                     // logged in user. Note that you could also use the `listPublished` method here instead
-                    // of `cms.entries.listLatest`, if a list of published pages is what you need.
+                    // of `cms.entries.listLatest`, if a list of published posts is what you need.
                     const response: [
                         CmsContentEntry[],
                         CmsContentEntryMeta
