wip: create graphql plugins guides

--- a/docs/how-to-guides/extend-graphql-api.mdx
+++ b/docs/how-to-guides/extend-graphql-api.mdx
@@ -7,6 +7,12 @@ description: Learn how to use GraphQL plugins in order to expand your GraphQL AP
 slug: extend-graphql-api
 ---
 
+:::tip What you'll learn
+
+- the two separate GraphQL APIs that are included by default in every Webiny project
+- how to use the [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) in order to extend an existing GraphQL API
+:::
+
 ## Introduction
 
 When it comes to HTTP API development, Webiny relies on [GraphQL](https://graphql.org/). In fact, all of the applications that are part of the Webiny Serverless CMS, for example [Page Builder](https://www.webiny.com/serverless-app/page-builder) or [Headless CMS](https://www.webiny.com/serverless-app/headless-cms), are using it in order to enable developers programmatic interaction via a client of their choice, for example a browser.
@@ -19,7 +25,7 @@ The **default GraphQL API** (or just **GraphQL API**) is the GraphQL API that's 
 
 :::tip
 
-The [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) and [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffolds use the same concepts and approaches that are explained in this guide.
+The [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) and [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area) scaffolds, which can help you extend your GraphQL API in no time, use the same concepts and approaches that are explained in this guide.
 
 :::
 
