--- a/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins.mdx
@@ -1,17 +1,25 @@
 ---
 id: content-model-plugins
-title: Defining Content Models via Plugins
-sidebar_label: Defining Content Models via Plugins
+title: Define Content Models via Plugins
+sidebar_label: Define Content Models via Plugins
 keywords: ["headless", "cms", "content", "model", "plugin"]
 description: Learn how to define content models and content model groups via plugins.
 ---
 
 import CenteredImage from "@components/CenteredImage";
 import contentModelsGroupEditor from "./content-models-plugins/content-models-group-editor.png";
+import basicsPluginsWork from "./content-models-plugins/basics-plugins-work.png";
+import faqIconSelector from "./content-models-plugins/faq-icon-selector.png";
 
 :::tip What you'll learn
 
 - how to define content models and content model groups via plugins
+
+:::
+
+:::info Can I use this?
+
+This feature is available since **v5.11.0**.
 
 :::
 
@@ -21,7 +29,7 @@ Content models and content model groups can be defined in two ways.
 
 ### Via the Admin Area
 
-The most straightforward way to define content models and content model groups would be via the Admin Area application, via the Content Model Editor and the Content Model Groups module. This is especially suitable for users that are not developers, and just want to manage their content in a quick and easy way.
+The most straightforward way to define content models and content model groups would be via the Admin Area application, via the Content Model Editor and the Content Model Groups module. This is especially suitable for users that are not developers, and just want to manage everything in a quick and easy way.
 
 <CenteredImage
   alt="Defining Content Models and Content Model Groups via the Admin Area Application"
@@ -30,12 +38,13 @@ The most straightforward way to define content models and content model groups w
 
 ### Using Plugins
 
-And although we can get pretty far by simply defining content models and content model groups via the Admin Area, on the other hand, we can also do this within our application code, by registering one or more [`ContentModelPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelPlugin.ts#L4) and [`ContentModelPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) plugins. Once defined, content models and content model groups can be then used via the Admin Area in the same way as if they were created regularly (via the Content Model Editor).
+And although we can get pretty far by simply defining content models and content model groups via the Admin Area, on the other hand, we can also do this within our application code, by registering one or more [`ContentModelPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelPlugin.ts#L4) and [`ContentModelGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) plugins. Once defined, content models and content model groups can be then used via the Admin Area in the same way as if they were created regularly (via the Content Model Editor).
 
 Some of the other benefits of this approach are:
 
-- our content models and content model groups get to be stored in our version control
-- since everything is done via code, in some cases we receive additional flexibility
+- content models and content model groups get to be stored in version control
+- since everything is done via code, in some case we may receive additional flexibility
+- by default, defined content models and content model groups are available for all available locales
 - basically, only developers have the ability to perform changes
 
 In the following sections, we cover a couple of examples that show how to define content models and content model groups via plugins.
@@ -44,9 +53,9 @@ In the following sections, we cover a couple of examples that show how to define
 
 ### Basic Example
 
-In this example, we show how we can define a simple **Product** content model, that belongs to the **E-Commerce** content model group.
+In this example, we show how we can define a simple **Product** content model, that belongs to the **E-Commerce** content model group. Both plugins can be define in a single file, in our case, [`api/code/headlessCMS/src/plugins/models.ts`](#):
 
-```ts
+```ts title="api/code/headlessCMS/src/plugins/models.ts"
 import { ContentModelPlugin } from "@webiny/api-headless-cms/content/plugins/ContentModelPlugin";
 import { ContentModelGroupPlugin } from "@webiny/api-headless-cms/content/plugins/ContentModelGroupPlugin";
 
@@ -104,6 +113,65 @@ export default [
 ];
 ```
 
+Once registered, we should end up with the following two items in our Admin Area main menu:
+
+<CenteredImage
+  alt="Product and E-Commerce Items in the Admin Area Main Menu"
+  src={basicsPluginsWork}
+/>
+
+As shown in the example, the [`ContentModelGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) receives a [`CmsContentModel`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/types.ts#L282) object upon instantiation. It lets us define all of the content model's properties, like its name, ID (`modelId`), a content model group to which it belongs to, and most importantly, all of the fields that it consists of.
+
+All of the fields of a single content model are defined via the [`fields`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/types.ts#L327) property, which is an array of [`CmsContentModelField`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/types.ts#L99) objects. Note that some of the properties that we need to define for each field are simple and straightforward, like for example `id`, `label`, `label`, `placeholderText`, and so on. On the other hand, properties like `type`, `renderer.name`, and `validation.name` contain values that actually reference other plugins that were already registered. In case an invalid reference was provided, an error will be thrown and you will have to make corrections.
+
+:::info
+
+All available [field types (`type`)](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/api-headless-cms/src/content/plugins/graphqlFields), [field renderers (`renderer.name`)](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/app-headless-cms/src/admin/plugins/fieldRenderers), and [field validators (`validators.name`)](https://github.com/webiny/webiny-js/tree/v5.11.0/packages/api-headless-cms/src/content/plugins/validators) can be found in our GitHub repository.
+:::
+
+:::tip
+Want to learn how to create your own custom field type? Check out the [Create a Field Plugin](/docs/how-to-guides/webiny-applications/headless-cms/create-a-webiny-headless-cms-field-plugin) how-to guide.
+:::
+
+Finally, note that both the **Product** content model and the **E-Commerce** content model group will be available for all existing locales. If you're interested in defining a content model only for a specific locale, check out the following example.
+
+### Define a Content Model Only for a Specific Locale
+
+In this example, we show how we can content models and content model groups only for a specific locale, in our case, the `en-US`.
+
+```ts title="api/code/headlessCMS/src/plugins/models.ts"
+import { ContentModelPlugin } from "@webiny/api-headless-cms/content/plugins/ContentModelPlugin";
+import { ContentModelGroupPlugin } from "@webiny/api-headless-cms/content/plugins/ContentModelGroupPlugin";
+import { ContextPlugin } from "@webiny/handler/plugins/ContextPlugin";
+import { CmsContext } from "@webiny/api-headless-cms/types";
+
+export default [
+    new ContextPlugin((context: CmsContext) => {
+        // Only register needed plugins if the current content locale is set to "en-US".
+        if (context.i18nContent.getLocale().code !== "en-US") {
+            return;
+        }
+
+        context.plugins.register([
+            new ContentModelGroupPlugin({
+               ...
+            }),
+            new ContentModelPlugin({
+                ...
+            })
+        ]);
+    })
+];
+```
+
+Note that we've used the [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/handler/src/plugins/ContextPlugin.ts#L7) first, in order to be able to access the dynamic `context` object, and the `context.i18nContent.getLocale` method. Once we've determined that the `en-US` is the current locale, we proceed by registering the [`ContentModelPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelPlugin.ts#L4) and [`ContentModelGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) plugins, as seen in the previous example.
+
+:::tip
+
+In Admin Area, user's current local is sent with every issued HTTP request, via the `x-i18n-locale` header.
+
+:::
+
 ## FAQ
 
 #### Can content models (and groups) defined via plugins be edited via Admin Area?
@@ -119,3 +187,28 @@ When it comes to security, both ways of defining content models and content mode
 You can, but it will require a bit of manual work. For example, if you wanted to convert a content model that was defined via Admin Area into a plugin, you would have to find it directly in the database, and copy the data into your application code and try to fit it into the [`ContentModelPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelPlugin.ts#L4) plugin.
 
 If you're doing this and require additional assistance, feel free to contact us over our community [Slack](https://www.webiny.com/slack).
+
+#### What's the difference between the `id` and `fieldId` properties in the [`ContentModelPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelPlugin.ts#L4) plugin?
+
+Both `id` and `fieldId` fields represent unique IDs of the field. We can assign any string value to them, but, for easier maintenance, we suggest you use a [camelCase](https://en.wikipedia.org/wiki/Camel_case) version of the actual name of the field. So, if the name of the field was **Author Name**, then we'd use `authorName` as the `id` and `fieldId`.
+
+There is a difference in how these two IDs are used internally within Headless CMS' application code, but this is more important when a content model is defined regularly, via the [Content Model Editor](http://localhost:3000/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins#via-the-admin-area). In case of content models defined via plugins, we can simply use the same value for both fields.
+
+#### What are the values that I can pass to the `icon` property of the [`ContentModelGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) plugin?
+
+When defining content model groups via Admin Area, we pick its icon via a simple drop-down menu:
+
+<CenteredImage alt="Content Model Groups Form - Icon Selector" src={faqIconSelector} />
+
+On the other hand, when defining content model groups via a plugin, we need to specify the icon manually, by setting the same string value that would be set once an icon was picked from the above seen drop-down menu.
+
+By default, we include three free sets of Font Awesome icons (via the [Fort Awesome](https://fortawesome.com/) library): [regular](https://fortawesome.com/sets/font-awesome-5-regular), [solid](https://fortawesome.com/sets/font-awesome-5-solid), and [brands](https://fortawesome.com/sets/font-awesome-5-brands). So, when defining your plugin, simply use the icon code listed on the set's icons list page, prepended with the set code.
+
+Here are a couple of examples of specifying icons from solid, regular, and brands sets:
+
+- `fas/shopping-cart`
+- `fas/id-card-alt`
+- `far/address-book`
+- `far/copy`
+- `fab/aws`.
+- `fab/react`.
