--- a/docs/how-to-guides/deployment/connect-custom-domain.mdx
+++ b/docs/how-to-guides/deployment/connect-custom-domain.mdx
@@ -13,23 +13,22 @@ description: Learn how to connect custom domain to your application in a Webiny 
 
 ## Introduction
 
-By default, both **Admin Area** `(apps/admin)` and **Website** `(apps/admin)` React applications are accessible by the CloudFront URL,
-which is fine for development purposes, however, for the production environment you're most likely need a custom domain for those applications.
-
-Why? Because, custom domains are human-readable, easy to remember, and good for branding.
+By default, both **Admin Area** `(apps/admin)` and **Website** `(apps/website)` React applications are accessible via a CloudFront URL.
+This is fine for development purposes, however, for the production environment you will most likely need a custom domain for those applications.
+This is because custom domains are human-readable, easy to remember, and good for branding.
 
 In this guide, we show how to add a custom domain to the **Website** `(apps/website)` React application,
 however, the same steps can be used for connecting it to the **Admin Area** `(apps/admin)` React application.
 
 ## Before We Begin
 
-Make sure that you do the following before you update your distribution to add a custom domain name:
+Before starting with this guide, make sure to do the following:
 - Register the domain name with the domain provider of your choice.
-- Create a certificate using [Aws Certificate Manager (ACM)](https://docs.aws.amazon.com/acm/latest/userguide/acm-overview.html) that covers the domain name you plan to use with the distribution to validate that you are authorized to use the domain.
+- Create a certificate using [AWS Certificate Manager (ACM)](https://docs.aws.amazon.com/acm/latest/userguide/acm-overview.html) that covers the domain name you plan to use with the distribution to validate that you are authorized to use the domain.
 You can also import an existing certificate into ACM from an authorized certificate authority (CA).
 
 :::info
-Learn more about requesting a public certificate using Aws Certificate Manager (ACM) in the official [AWS documentation article](https://docs.aws.amazon.com/acm/latest/userguide/gs-acm-request-public.html#request-public-console).
+Learn more about requesting a public certificate using AWS Certificate Manager (ACM) in the official [AWS documentation article](https://docs.aws.amazon.com/acm/latest/userguide/gs-acm-request-public.html#request-public-console).
 :::
 
 :::info
@@ -38,8 +37,8 @@ Read more about requirements for using alternate domain names in the official [A
 
 ## Add Alternate Domain for CloudFront Distribution
 
-We need to update the CloudFormation distribution for the Website application using pulumi code in
-[`apps/website/pulumi/delivery.ts`](https://github.com/webiny/webiny-js/blob/next/apps/website/pulumi/delivery.ts#L16) file:
+As the first step, we need to update the CloudFormation distribution for the Website application via the Pulumi code in
+[`apps/website/pulumi/delivery.ts`](https://github.com/webiny/webiny-js/blob/next/apps/website/pulumi/delivery.ts#L16) project application:
 
 ```ts title="apps/website/pulumi/delivery.ts"
 // Some of the code is removed for brevity.
@@ -64,10 +63,10 @@ class Delivery {
 ```
 
 We only need to update these two options:
-- `viewerCertificate`: The SSL configuration for this distribution.
-- `aliases`: Extra CNAMEs (alternate domain names) for this distribution.
+- `viewerCertificate`: the SSL configuration for this distribution.
+- `aliases`: extra CNAMEs (alternate domain names) for this distribution.
 
-Let's suppose our domain is `coolwebsite.com`, and we want to use it for the Website.
+Let's suppose we've registered the `coolwebsite.com`, and we want to use it for the Website.
 So, we'll use it as the value for `aliases`, for example:
 
 ```ts title="apps/website/pulumi/delivery.ts" {14}
@@ -93,17 +92,15 @@ class Delivery {
 }
 ```
 
-Now for next step, remember, we have created the certificate for our domain in **ACM** in the previous step.
+In the next step, we will use the certificate that we previously created.
 To use that SSL certificate in this distribution, we need to add the following:
 
-- `acmCertificateArn`: The ARN of the AWS Certificate Manager certificate that you wish to use with this distribution.
-The ACM certificate must be in `US-EAST-1` region.
-- `sslSupportMethod`: If the distribution uses Aliases (alternate domain names or CNAMEs), specify which viewers the distribution accepts HTTPS connections from.
+- `acmCertificateArn`: the ARN of the AWS Certificate Manager certificate that you wish to use with this distribution.
+The ACM certificate must be in `us-east-1` region.
+- `sslSupportMethod`: if the distribution uses Aliases (alternate domain names or CNAMEs), specify which viewers the distribution accepts HTTPS connections from.
 
-:::info
-We'll use `"sni-only"` – Which means distribution accepts HTTPS connections from only viewers that support [server name indication (SNI)](https://en.wikipedia.org/wiki/Server_Name_Indication).
+For the sslSupportMethod, we'll use `"sni-only"` – which means distribution accepts HTTPS connections from only viewers that support [server name indication (SNI)](https://en.wikipedia.org/wiki/Server_Name_Indication).
 This is recommended. Most browsers and clients support SNI.
-:::
 
 ```ts title="apps/website/pulumi/delivery.ts" {15-18}
 // Some of the code is removed for brevity.
@@ -129,24 +126,25 @@ class Delivery {
 }
 ```
 
-With the above change in place, `deploy` the **Website** stack to update the cloud resources.
+With the above change in place, `deploy`  the **Website** project application, so that the new configuration is properly applied.
 
-Let's move on to the last step, that is, point our domain to the CloudFront Distribution.
+It's time to move on to the last step, which is pointing our custom domain to the CloudFront Distribution.
 
 ## Point Domain to CloudFront Distribution
 
 Now that we have added our custom domain as the alternative domain for the CloudFront URL, we also must configure the DNS service for the domain to route traffic for the domain,
-such as `www.example.com`, to the CloudFront domain name for your distribution, such as `d111111abcdef8.cloudfront.net`.
+such as `coolwebsite.com`, to the CloudFront domain name for your distribution, such as `d111111abcdef8.cloudfront.net`.
 
 Use the method provided by your DNS service provider to add a **CNAME** record for your domain.
-This new **CNAME** record will redirect DNS queries from your domain (for example, `www.example.com`) to the CloudFront domain name for your distribution (for example, `d111111abcdef8.cloudfront.net`).
+This new **CNAME** record will redirect DNS queries from your domain (for example, `coolwebsite.com`) to the CloudFront domain name for your distribution (for example, `d111111abcdef8.cloudfront.net`).
 For more information, see the documentation provided by your DNS service provider.
 
-:::caution
-The changes made to the DNS service might take few minutes to reflect on the AWS CloudFront Distribution.
+:::tip
+The changes made to the DNS service might take few minutes to propagate.
+You can use a service like [DNS Checker](https://dnschecker.org/) to check the status of newly added **CNAME** record.
 :::
 
-Finally, test the alternate domain name by visiting URLs with your domain name instead of the CloudFront domain name for your distribution:
+Finally, test the alternate domain name by visiting URLs with your domain name instead of the CloudFront domain name of your distribution:
 
 <!-- vale off -->
 
