fix: use connect as the main terminology

--- a/docs/how-to-guides/deployment/connect-custom-domain.mdx
+++ b/docs/how-to-guides/deployment/connect-custom-domain.mdx
@@ -17,14 +17,15 @@ By default, both **Admin Area** `(apps/admin)` and **Website** `(apps/website)` 
 This is fine for development purposes, however, for the production environment you will most likely need a custom domain for those applications.
 This is because custom domains are human-readable, easy to remember, and good for branding.
 
-In this guide, we show how to add a custom domain to the **Website** `(apps/website)` React application,
+In this guide, we show how to connect a custom domain to the **Website** `(apps/website)` React application,
 however, the same steps can be used for connecting it to the **Admin Area** `(apps/admin)` React application.
 
 ## Before We Begin
 
 Before starting with this guide, make sure to do the following:
 - Register the domain name with the domain provider of your choice.
-- Create a certificate using [AWS Certificate Manager (ACM)](https://docs.aws.amazon.com/acm/latest/userguide/acm-overview.html) that covers the domain name you plan to use with the distribution to validate that you are authorized to use the domain.
+- Create a certificate using [AWS Certificate Manager (ACM)](https://docs.aws.amazon.com/acm/latest/userguide/acm-overview.html)
+that covers the domain name you plan to use with the distribution to validate that you are authorized to use the domain.
 You can also import an existing certificate into ACM from an authorized certificate authority (CA).
 
 :::info
@@ -132,7 +133,7 @@ It's time to move on to the last step, which is pointing our custom domain to th
 
 ## Point Domain to CloudFront Distribution
 
-Now that we have added our custom domain as the alternative domain for the CloudFront URL, we also must configure the DNS service for the domain to route traffic for the domain,
+Now that we have connected our custom domain as the alternative domain for the CloudFront URL, we also must configure the DNS service for the domain to route traffic for the domain,
 such as `coolwebsite.com`, to the CloudFront domain name for your distribution, such as `d111111abcdef8.cloudfront.net`.
 
 Use the method provided by your DNS service provider to add a **CNAME** record for your domain.
